# email-triage-env

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  app.py  blog.md  client.py  code pii_detector.py  inference.py  openenv.yaml  pii_detector.py  pyproject.toml  requirements-train.txt  requirements.txt  setup.py  streamlit_app.py  tagger.py  write_server.py
docs/: hf_mini_blog.md  video_script.md
env/: __init__.py  environment.py  graders.py  models.py  openenv_compat.py  tasks.py
executive_assistant_negotiation_env/: __init__.py
notebooks/: minimal_trl_colab.ipynb
outputs/evals/: baseline_metrics.json
outputs/sft_run/: README.md  dataset_preview.json  trainer_state.json
outputs/sft_run/checkpoint-3/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
outputs/submission_eval/: behavior_examples.json  submission_metrics.json
scripts/: benchmark.py  evaluate_submission.py  minimal_trl_train.py  plot_training_state.py  train_sft_submission.py  training_data.py
server/: app.py
