[project]
name = "email-triage-env"
version = "1.0.0"
description = "An RL environment for triaging emails"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv-core",
    "python-dotenv",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"