[project]
name = "executive-assistant-negotiation-env"
version = "2.0.0"
description = "An OpenEnv environment for multi-agent executive assistant planning"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.3",
    "pillow",
    "streamlit",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["env", "server"]
